Change test sources in build.gradle to be java, not groovy.

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ sourceSets {
     }
 
     test {
-        groovy {
+        java {
             //noinspection GroovyAssignabilityCheck
             srcDirs = ["test"]
         }
